chore: 🔧 spotless / pmd setup and a bit of cleanup